# oxigraph

./: .gitmodules  Cargo.toml
hdt_driver/: Cargo.toml
hdt_driver/src/: main.rs
lib/: Cargo.toml
lib/oxigraph/: Cargo.toml
lib/oxigraph/benches/: store.rs
lib/oxigraph/src/sparql/: bgp.rs  dataset.rs  eval.rs  mod.rs  update.rs
lib/oxigraph/src/storage/: mod.rs  numeric_encoder.rs
lib/oxrdf/src/: blank_node.rs
lib/sparesults/src/: csv.rs
lib/src/sparql/: dataset.rs  eval.rs  mod.rs  plan_builder.rs  update.rs
lib/src/storage/: mod.rs  numeric_encoder.rs
lib/src/storage/backend/: mod.rs
oxhdt-sys/: Cargo.toml
oxhdt-sys/src/: lib.rs  main.rs
python/tests/: test_io.py
testsuite/src/: files.rs  sparql_evaluator.rs
