[workspace]
members = [
    "hdt_driver",
    "js",
    "lib",
    "lib/oxrdf",
    "lib/oxsdatatypes",
    "lib/sparesults",
    "lib/spargebra",
    "lib/sparql-smith",
    "oxhdt-sys",
    "oxrocksdb-sys",
    "python",
    "server",
    "testsuite",
]
resolver = "2"

[profile.release]
lto = true
codegen-units = 1

[profile.release.package.oxigraph_js]
opt-level = "z"
